--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="last_name">Last Name</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+
+    <string name="click_to_login">Click to Login</string>
+    <string name="click_to_register">Click to Register</string>
+
+    <item name="btn_login" type="id">Login</item>
+    <item name="btn_register" type="id">Register</item>
 </resources>
